--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,62 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    input:disabled,
+    select:disabled,
+    textarea:disabled {
+        @apply bg-opacity-50 !opacity-70;
+    }
+
+    input[type="number"] {
+        -moz-appearance: textfield;
+    }
+
+    button:disabled {
+        @apply pointer-events-none opacity-60;
+    }
+}
+@layer components {
+    .rf-container {
+        @apply max-w-6xl px-4 py-6 mx-auto sm:px-6 lg:px-8;
+    }
+
+    .color-primary {
+        @apply text-[#575353];
+    }
+
+    .bg-primary {
+        @apply bg-[#575353];
+    }
+
+    .btn {
+        @apply focus:outline-none text-[#575353] focus:ring-4 font-medium rounded-3xl text-sm px-5 py-2.5 shadow-xl border;
+    }
+
+    .btn-danger {
+        @apply bg-red-700 hover:bg-red-800 focus:ring-red-300;
+    }
+
+    .btn-success {
+        @apply bg-green-700 hover:bg-green-800 focus:ring-green-300;
+    }
+
+    .btn-primary {
+        @apply font-bold text-white bg-gray-500 border border-white;
+    }
+
+    .btn-light {
+        @apply bg-purple-700 hover:bg-purple-800 focus:ring-purple-300;
+    }
+
+    .page-heading {
+        @apply text-3xl font-bold leading-tight text-[#575353] mb-6;
+    }
+}
+
+@layer utilities {
+    .main-height {
+        min-height: calc(100vh - 162px);
+    }
+}
