--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,6 @@
 @import "intl-tel-input/build/css/intlTelInput.css";
 @import "/node_modules/flag-icons/css/flag-icons.min.css";
+@import "./Madefor.css";
 
 .iti {
     width: 100%;
@@ -33,6 +34,7 @@
         @apply pointer-events-none opacity-60;
     }
 }
+
 @layer components {
     .rf-container {
         @apply max-w-6xl px-4 py-6 mx-auto sm:px-6 lg:px-8;
