--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -53,7 +53,7 @@
     }
 
     .btn {
-        @apply focus:outline-none text-[#575353] focus:ring-4 font-medium rounded-3xl text-sm px-5 py-2.5 shadow-xl border;
+        @apply focus:outline-none text-[#575353] focus:ring-4 font-medium rounded-3xl text-sm px-5 py-2.5 shadow-md border;
     }
 
     .btn-danger {
@@ -73,7 +73,7 @@
     }
 
     .page-heading {
-        @apply text-3xl font-bold leading-tight text-[#575353] mb-6;
+        @apply text-3xl font-bold leading-tight text-[#575353] mb-6 tracking-wider;
     }
 
     .avatar {
@@ -93,6 +93,10 @@
 
     .table-head:nth-child(even) > div {
         @apply bg-[#e8ecf4];
+    }
+
+    .text-spaced {
+        @apply tracking-wider;
     }
 }
 
