--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -26,6 +26,13 @@
         @apply bg-opacity-50 !opacity-70;
     }
 
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    }
+
+    /* Firefox */
     input[type="number"] {
         -moz-appearance: textfield;
     }
